src/objects/AMSTATCORP__Setting__c.object
<CustomObject>
    <description>AMSTAT App Settings</description>
    <fields>
        <fullName>AMSTATCORP__Description__c</fullName>
        <description>Description of the setting</description>
        <inlineHelpText>Description of the setting</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMSTATCORP__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicator if the Setting is active</description>
        <inlineHelpText>Indicator if the Setting is active</inlineHelpText>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMSTATCORP__Setting_Type__c</fullName>
        <defaultValue>&quot;String&quot;</defaultValue>
        <description>Type of the setting value.</description>
        <inlineHelpText>Type of the setting value.</inlineHelpText>
        <label>Setting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Datetime</fullName>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
                <value>
                    <fullName>Double</fullName>
                </value>
                <value>
                    <fullName>Integer</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMSTATCORP__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User the setting applies to</description>
        <inlineHelpText>User the setting applies to</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AMSTATCORP__Value__c</fullName>
        <description>The Value of the Setting</description>
        <inlineHelpText>The Value of the Setting</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Setting (Deprecated)</label>
    <listViews>
        <fullName>AMSTATCORP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>